--- a/source/sass/blocks/title.scss
+++ b/source/sass/blocks/title.scss
@@ -12,7 +12,7 @@
 
   &--stripe {
     display: inline-block;
-    background-color: #fff;
+    background-color: #ffffff;
 
     @include font(24, 1);
     text-align: left;
@@ -32,7 +32,6 @@
         right: 50%;
         left: 0;
         margin-right: 370px;
-
       }
     }
   }
@@ -44,7 +43,7 @@
     z-index: -1;
     left: 40%;
     right: 0;
-    margin-top: -11px;
+    margin-top: -14px;
     margin-left: 20px;
     height: 3px;
     background-color: $green-2;
