--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -15,7 +15,7 @@
     padding-left: $padding-desktop;
     padding-right: $padding-desktop;
 
-    &--catalog {
+    &--wrapper {
       padding-top: 55px;
     }
   }
