--- a/source/sass/main/variables.scss
+++ b/source/sass/main/variables.scss
@@ -9,6 +9,8 @@ $dark-3: #111111;
 $green-1: #63a73a; // фон блоков
 $green-2: #68b738; // кнопка
 
+$red-1: #ff8282;
+
 $screen-tablet: 768px;
 $screen-desktop: 1300px;
 
