--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -20,17 +20,17 @@
 }
 
 .programs__item {
-  position: relative;
-  padding: 25px 20px 20px;
+  // position: relative;
+  padding: 31px 20px 20px;
   background-color: $grey-1;
   margin-bottom: 20px;
 
   @media (min-width: $screen-tablet) {
     padding-top: 77px;
     padding-right: 60px;
-    padding-bottom: 60px;
-    padding-left: 55px;
-    margin-bottom: 25px;
+    padding-bottom: 57px;
+    padding-left: 52px;
+    margin-bottom: 30px;
   }
 
   @media (min-width: $screen-desktop) {
@@ -39,7 +39,7 @@
     padding-top: 45px;
     padding-right: 55px;
     padding-bottom: 60px;
-    padding-left: 50px;
+    padding-left: 52px;
   }
 }
 
@@ -47,30 +47,35 @@
   position: relative;
   display: flex;
   align-items: center;
-  padding: 0;
   margin: 0;
+  padding: 0;
+  padding-left: 71px;
+
 
   @include font(24, 1.54);
   color: $dark-3;
-  letter-spacing: -0.3px;
   text-transform: uppercase;
-  margin-bottom: 25px;
+  margin-bottom: 29px;
 
   @media (min-width: $screen-tablet) {
-    position: static;
+    // position: static;
     width: 380px;
     margin-bottom: 24px;
+    padding-left: 0;
 
     @include font (36, 1);
-    letter-spacing: -1px;
   }
 
   @media (min-width: $screen-desktop) {
-    margin-bottom: 40px;
+    margin-bottom: 72px;
+    padding-left: 160px;
+    padding-top: 32px;
   }
 
   &::before {
     content: "";
+    position: absolute;
+    left: 0;
     width: 50px;
     height: 50px;
     margin-right: 20px;
@@ -78,11 +83,17 @@
     border-radius: 50%;
 
     @media (min-width: $screen-tablet) {
-      @include pos (200px, 200px, 92px, 63%);
+      content: "";
+      position: absolute;
+      width: 200px;
+      height: 200px;
+      left: 394px;
+      top: 15px;
     }
 
     @media (min-width: $screen-desktop) {
-      position: static;
+      // position: static;
+      position: absolute;
       top: 0;
       left: 0;
       width: 100px;
@@ -92,28 +103,37 @@
   }
 
   &--slim::after {
-    @include pos (35px, 49px, 0, 10px);
+    position: absolute;
+    content: "";
+    left: 10px;
+    width: 35px;
+    height: 49px;
+
     @include b-image("icon-cat-slim.svg", transparent);
 
     @media (min-width: $screen-tablet) {
-      @include pos (140px, 194px, 80px, 478px);
+      @include pos (140px, 194px, 0, 424px);
     }
 
     @media (min-width: $screen-desktop) {
-      @include pos (79px, 97px, 41px, 12%);
+      @include pos (79px, 97px, -5px, 15px);
     }
   }
 
   &--pro::after {
-    @include pos (67px, 28px, 10px, -7px);
+    position: absolute;
+    content: "";
+    left: -7px;
+    width: 67px;
+    height: 28px;
     @include b-image("icon-cat-pro.svg", transparent);
 
     @media (min-width: $screen-tablet) {
-      @include pos (268px, 112px, 135px, 413px);
+      @include pos (268px, 112px, 55px, 360px);
     }
 
     @media (min-width: $screen-desktop) {
-      @include pos (134px, 56px, 68px, 6%);
+      @include pos (134px, 56px, 22px, -15px);
     }
   }
 }
@@ -126,7 +146,7 @@
   font-family: "Arial", sans-serif;
   border-bottom: 1px solid $grey-3;
 
-  @media (max-width: $screen-tablet) { // for mobile ONLY
+  @media (max-width: 767px) { // for mobile ONLY
     br {
       display: none;
     }
@@ -154,7 +174,6 @@
 }
 
 .programs__link {
-  letter-spacing: -0.5px;
 
   svg {
     width: 40px;
@@ -173,6 +192,15 @@
     margin-left: 13px;
 
     @include b-image("icon-right-arrow-long.svg", transparent);
+
+    @media (min-width: $screen-tablet) {
+      margin-left: 26px;
+    }
+  }
+
+  &:hover::after {
+    width: 33px;
+    @include b-image("icon-right-arrow-verylong.svg", transparent);
   }
 
   &:active,
@@ -181,6 +209,7 @@
   }
 
   @media (min-width: $screen-tablet) {
+
     @include font (20, 1);
   }
 }
