--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -16,7 +16,7 @@
   margin: 0;
   margin-bottom: 40px;
   padding-left: $padding-mobile;
-  padding-right: $padding-mobile;
+  padding-right: 40px;
 
   @include font(14, 1.2);
   text-transform: uppercase;
@@ -40,7 +40,7 @@
   position: relative;
   display: flex;
   align-items: baseline;
-  margin-bottom: 15px;
+  margin-bottom: 16px;
   text-transform: uppercase;
   color: $dark-2;
 
@@ -52,12 +52,16 @@
 .form__input {
   flex-grow: 1;
   min-width: 130px;
-  padding: 12px 16px;
-  margin-left: 13px;
+  padding: 12px 15px;
+  margin-left: 20px;
   font: inherit;
   text-transform: uppercase;
   outline: none;
   border: solid 1px rgba($grey-4, 0.5);
+
+  &--name {
+    margin-left: 13px;
+  }
 
   @media (min-width: $screen-tablet) {
     margin-left: 20px;
@@ -71,8 +75,8 @@
     box-shadow: inset 0 0 0 2px $dark-1;
   }
 
-  &:focus:invalid {
-    box-shadow: inset 0 0 0 2px red;
+  &:invalid {
+    // box-shadow: inset 0 0 0 2px red;
   }
 }
 
@@ -94,24 +98,30 @@
 .form__radio {
   display: flex;
   align-items: center;
-}
 
-.form__radio::before {
-  content: "";
-  display: block;
-  width: 30px;
-  height: 30px;
-  margin-right: 15px;
-  padding: 8px;
-  background-clip: content-box;
-  border: 1px solid $grey-4;
-  border-radius: 50%;
 
-  @media (min-width: $screen-tablet) {
-    width: 40px;
-    height: 40px;
-    margin-right: 20px;
+  &::before {
+    content: "";
+    display: block;
+    width: 30px;
+    height: 30px;
+    margin-right: 15px;
+    padding: 8px;
+    background-clip: content-box;
+    border: 1px solid $grey-4;
+    border-radius: 50%;
+
+    @media (min-width: $screen-tablet) {
+      width: 40px;
+      height: 40px;
+      margin-right: 20px;
+    }
   }
+  //
+  // &:hover::before {
+  //   border-color: red;
+  //   // border-color: #bababa;
+  // }
 }
 
 input:checked + .form__radio::before {
@@ -125,11 +135,10 @@ input:focus + .form__radio::before {
 .form__textarea {
   width: 100%;
   height: 150px;
-  margin-top: 10px;
+  margin-top: 5px;
   padding: 13px;
   font: inherit;
   text-transform: uppercase;
-  letter-spacing: -0.4px;
   outline: none;
   border: solid 1px rgba($grey-4, 0.5);
 
@@ -279,7 +288,7 @@ input:focus + .form__radio::before {
   }
 
   &:hover::before {
-    border: 1px solid $grey-4;
+    border-color: #bababa;
   }
 
   &:active {
@@ -305,6 +314,10 @@ input:checked + .form__checkbox::after {
   }
 }
 
+input:disabled + .form__radio,
+input:disabled + .form__checkbox {
+  opacity: 0.3;
+}
 
 .form__title {
   margin: 0;
@@ -313,7 +326,6 @@ input:checked + .form__checkbox::after {
   padding-right: 22px;
   padding-left: 20px;
   text-align: left;
-  letter-spacing: -1px;
 
   @media (min-width: $screen-tablet) {
     &:not(:first-child) {
@@ -428,7 +440,7 @@ input:checked + .form__checkbox::after {
 .form__required {
   display: block;
   padding-top: 20px;
-  padding-bottom: 34px;
+  padding-bottom: 30px;
   font-family: "Arial", sans-serif;
   text-align: center;
   color: $dark-1;
