--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -74,11 +74,13 @@
 
     &--before {
       left: 48%;
+
+      &:hover {
+        border-color: $green-1;
+        box-shadow: 0px 4px 5px 0 rgba(0, 0, 0, 0.3);
+      }
     }
 
-    &--after {
-      left: 48%;
-    }
   }
 
   @media (min-width: $screen-desktop) {
@@ -87,7 +89,7 @@
 }
 
 .slider__image-wrap {
-  margin-bottom: 27px;
+  margin-bottom: 29px;
 
   @media (min-width: $screen-desktop) {
     margin-bottom: 40px;
@@ -95,10 +97,10 @@
 
   &--before {
     @media (min-width: $screen-tablet) {
-      position: absolute;
-      overflow: hidden;
+      // position: absolute;
+      // overflow: hidden;
       z-index: 1;
-      width: 345px;
+      // width: 345px;
     }
   }
 
@@ -107,18 +109,18 @@
 
     @media (min-width: $screen-tablet) {
       position: relative;
-      display: block;
-      width: 345px;
+      // display: block;
+      // width: 345px;
     }
   }
 }
 
 .slider__image {
   @media (min-width: $screen-tablet) {
+    display: block;
     width: 690px;
     max-width: 690px;
     height: 517px;
-    display: block;
     margin: 0 auto;
   }
 
