--- a/source/sass/main/variables.scss
+++ b/source/sass/main/variables.scss
@@ -8,6 +8,7 @@ $dark-2: #222222;
 $dark-3: #111111;
 $green-1: #63a73a; // фон блоков
 $green-2: #68b738; // кнопка
+$green-3: #5eaa2f;
 
 $red-1: #ff8282;
 
