--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -40,7 +40,7 @@
   position: relative;
   display: flex;
   align-items: baseline;
-  margin-bottom: 16px;
+  margin-bottom: 13px;
   text-transform: uppercase;
   color: $dark-2;
 
@@ -51,16 +51,24 @@
 
 .form__input {
   flex-grow: 1;
-  min-width: 130px;
-  padding: 12px 15px;
-  margin-left: 20px;
+  width: 170px;
+  padding: 13px 15px;
+  // margin-left: 20px;
   font: inherit;
   text-transform: uppercase;
   outline: none;
   border: solid 1px rgba($grey-4, 0.5);
 
   &--name {
-    margin-left: 13px;
+    margin-left: 14px;
+  }
+
+  &--weight {
+    margin-left: 16px;
+  }
+
+  &--age {
+    margin-left: 16px;
   }
 
   @media (min-width: $screen-tablet) {
@@ -135,8 +143,8 @@ input:focus + .form__radio::before {
 .form__textarea {
   width: 100%;
   height: 150px;
-  margin-top: 5px;
-  padding: 13px;
+  margin-top: 7px;
+  padding: 13px 14px;
   font: inherit;
   text-transform: uppercase;
   outline: none;
@@ -196,7 +204,7 @@ input:focus + .form__radio::before {
 
   &--program {
     margin-bottom: 15px;
-    padding-top: 20px;
+    padding-top: 18px;
     padding-bottom: 20px;
     border: 1px solid $grey-3;
 
@@ -321,7 +329,7 @@ input:disabled + .form__checkbox {
 
 .form__title {
   margin: 0;
-  padding-top: 16px;
+  padding-top: 17px;
   padding-bottom: 25px;
   padding-right: 22px;
   padding-left: 20px;
@@ -406,7 +414,7 @@ input:disabled + .form__checkbox {
   }
 
   &--owner-data .form__input {
-    margin-left: 8px;
+    margin-left: 10px;
 
     @media (min-width: $screen-tablet) {
       margin-left: 15px;
