--- a/source/sass/blocks/title.scss
+++ b/source/sass/blocks/title.scss
@@ -20,6 +20,12 @@
     @media (min-width: $screen-tablet) {
       @include font(36, 1);
     }
+
+    @media (max-width: $screen-tablet) { //for mobile ONLY!
+      &:first-of-type::after {
+        transform: translateY(-37px);
+      }
+    }
   }
 
   &--stripe::after {
@@ -29,7 +35,7 @@
     z-index: -1;
     left: 40%;
     right: 0;
-    margin-top: -14px;
+    transform: translateY(-14px);
     margin-left: 20px;
     height: 3px;
     background-color: $green-2;
