--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -2,6 +2,10 @@
   @media (min-width: $screen-desktop) {
     margin-bottom: 30px;
   }
+
+  @media (min-width: $screen-desktop) {
+    margin-bottom: 23px;
+  }
 }
 
 .programs__button {
