--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -47,6 +47,10 @@
   @media (min-width: $screen-tablet) {
     margin-bottom: 20px;
   }
+
+  @media (min-width: $screen-desktop) {
+    margin-bottom: 21px;
+  }
 }
 
 .form__input {
@@ -71,10 +75,6 @@
     margin-left: 16px;
   }
 
-  @media (min-width: $screen-tablet) {
-    margin-left: 20px;
-  }
-
   &:hover {
     border: solid 1px rgba($grey-4, 1);
   }
@@ -85,6 +85,11 @@
 
   &:invalid {
     // box-shadow: inset 0 0 0 2px red;
+  }
+
+  @media (min-width: $screen-tablet) {
+    margin-left: 20px;
+    padding: 15px 17px;
   }
 }
 
@@ -186,7 +191,7 @@ input:focus + .form__radio::before {
     padding-right: $padding-mobile;
 
     @media (min-width: $screen-tablet) {
-      margin-bottom: 70px;
+      margin-bottom: 72px;
       padding-left: 70px;
       padding-right: 70px;
     }
@@ -212,7 +217,7 @@ input:focus + .form__radio::before {
       margin: 0;
       margin-left: 70px;
       margin-right: 70px;
-      margin-bottom: 20px;
+      margin-bottom: 22px;
       padding: 24px 28px;
       border: 1px solid $grey-4;
     }
@@ -347,11 +352,7 @@ input:disabled + .form__checkbox {
 
     &:nth-of-type(3) {
       margin-bottom: 25px;
-      padding-top: 45px;
-    }
-
-    &:first-child {
-      letter-spacing: -1.9px;
+      padding-top: 48px;
     }
 
     padding-top: 55px;
@@ -417,7 +418,7 @@ input:disabled + .form__checkbox {
     margin-left: 10px;
 
     @media (min-width: $screen-tablet) {
-      margin-left: 15px;
+      margin-left: 16px;
     }
   }
 }
