--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -19,10 +19,8 @@
   @media (min-width: $screen-desktop) {
     width: $screen-desktop;
     margin: 0  auto;
-    padding-top: 52px;
     padding-left: $padding-desktop;
     padding-right: $padding-desktop;
-    padding-bottom: 60px;
   }
 }
 
@@ -57,6 +55,14 @@
   padding-bottom: 22px;
   padding-left: 0;
   padding-right: 0;
+
+  &:hover .footer__icon {
+    fill: $green-2;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 
   @media (min-width: $screen-tablet) {
     align-items: center;
