--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -56,23 +56,56 @@
 .form__input {
   flex-grow: 1;
   width: 170px;
+  height: 45px;
   padding: 13px 15px;
-  // margin-left: 20px;
   font: inherit;
   text-transform: uppercase;
   outline: none;
   border: solid 1px rgba($grey-4, 0.5);
 
+  @media (min-width: $screen-tablet) {
+    height: 52px;
+    margin-left: 20px;
+    padding: 15px 17px;
+  }
+
   &--name {
     margin-left: 14px;
+    @media (min-width: $screen-tablet) {
+      margin-left: 16px;
+    }
   }
 
   &--weight {
     margin-left: 16px;
+    @media (min-width: $screen-tablet) {
+      margin-left: 20px;
+    }
   }
 
   &--age {
     margin-left: 16px;
+    @media (min-width: $screen-tablet) {
+      margin-left: 18px;
+    }
+  }
+
+  &--mail {
+    margin-left: 10px;
+    @media (min-width: $screen-tablet) {
+      margin-left: 18px;
+    }
+
+    @media (min-width: $screen-desktop) {
+      margin-left: 22px;
+    }
+  }
+
+  &--phone {
+    margin-left: 10px;
+    @media (min-width: $screen-tablet) {
+      margin-left: 16px;
+    }
   }
 
   &:hover {
@@ -86,11 +119,6 @@
   &:invalid {
     // box-shadow: inset 0 0 0 2px red;
   }
-
-  @media (min-width: $screen-tablet) {
-    margin-left: 20px;
-    padding: 15px 17px;
-  }
 }
 
 .form__icon {
@@ -98,6 +126,11 @@
   top: 17px;
   right: 15px;
   fill: $dark-2;
+
+  @media (min-width: $screen-desktop) {
+    top: 19px;
+    right: 20px;
+  }
 }
 
 .form__input:focus + .form__icon {
@@ -211,7 +244,7 @@ input:focus + .form__radio::before {
     margin-bottom: 15px;
     padding-top: 18px;
     padding-bottom: 20px;
-    border: 1px solid $grey-3;
+    border: solid 1px rgba($grey-4, 0.5);
 
     @media (min-width: $screen-tablet) {
       margin: 0;
@@ -219,7 +252,7 @@ input:focus + .form__radio::before {
       margin-right: 70px;
       margin-bottom: 22px;
       padding: 24px 28px;
-      border: 1px solid $grey-4;
+      // border: 1px solid $grey-4;
     }
 
     @media (min-width: $screen-desktop) {
@@ -248,7 +281,7 @@ input:focus + .form__radio::before {
     }
 
     @media (min-width: $screen-desktop) {
-      margin-bottom: 35px;
+      margin-bottom: 32px;
     }
   }
 
@@ -266,7 +299,7 @@ input:focus + .form__radio::before {
     }
 
     @media (min-width: $screen-desktop) {
-      width: calc(25% - 70px);
+      width: calc(25% - 60px);
     }
   }
 }
@@ -297,6 +330,7 @@ input:focus + .form__radio::before {
     @media (min-width: $screen-tablet) {
       width: 40px;
       height: 40px;
+      margin-right: 18px;
     }
   }
 
@@ -351,7 +385,7 @@ input:disabled + .form__checkbox {
     }
 
     &:nth-of-type(3) {
-      margin-bottom: 25px;
+      margin-bottom: 23px;
       padding-top: 48px;
     }
 
@@ -406,19 +440,6 @@ input:disabled + .form__checkbox {
   &--owner-data .form__label {
     @media (min-width: $screen-desktop) {
       width: calc(50% - 40px);
-
-
-      &:not(:last-child) {
-        // margin-right: 75px;
-      }
-    }
-  }
-
-  &--owner-data .form__input {
-    margin-left: 10px;
-
-    @media (min-width: $screen-tablet) {
-      margin-left: 16px;
     }
   }
 }
