--- a/source/sass/blocks/function.scss
+++ b/source/sass/blocks/function.scss
@@ -73,6 +73,10 @@
       margin-right: 20px;
       margin-bottom: 30px;
     }
+
+    @media (min-width: $screen-desktop) {
+      margin-bottom: 32px;
+    }
   }
 
   &::after {
