--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -23,7 +23,19 @@
   text-transform: uppercase;
 
   @media (min-width: $screen-tablet) {
+    padding-bottom: 5px;
+
     @include font(20, 1);
+    border-bottom: 1px dotted rgba(17, 17, 17, 0.23);
+
+    &:hover {
+      cursor: pointer;
+      border-bottom: 1px solid rgba(17, 17, 17, 0.4);
+    }
+
+    &:active {
+      border-bottom: none;
+    }
   }
 
   &:first-of-type {
@@ -76,6 +88,10 @@
       left: 48%;
 
       &:hover {
+        box-shadow: 0px 3px 5px 0 rgba(0, 0, 0, 0.25);
+      }
+
+      &:active {
         border-color: $green-1;
         box-shadow: 0px 4px 5px 0 rgba(0, 0, 0, 0.3);
       }
