--- a/source/sass/blocks/function.scss
+++ b/source/sass/blocks/function.scss
@@ -66,6 +66,11 @@
     width: 60px;
     height: 60px;
     margin-right: 20px;
+    background-color: $green-2;
+
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background-size: 50px 50px;
+    }
 
     @media (min-width: $screen-tablet) {
       width: 80px;
@@ -94,12 +99,6 @@
     }
   }
 
-  &::before {
-    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background-size: 50px 50px;
-    }
-  }
-
   &:nth-child(1)::before {
     @include b-image ("advantage-leaf@1x.png", $green-2,  center);
 
@@ -110,6 +109,7 @@
 
   &:nth-child(2)::before {
     @include b-image ("advantage-powder@1x.png", $green-2, center);
+
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
       background-image: url("/img/advantage-powder@2x.png");
     }
@@ -117,6 +117,7 @@
 
   &:nth-child(3)::before {
     @include b-image ("advantage-dining@1x.png", $green-2,  center);
+
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
       background-image: url("/img/advantage-dining@2x.png");
     }
@@ -124,6 +125,7 @@
 
   &:nth-child(4)::before {
     @include b-image ("advantage-clock@1x.png", $green-2, center);
+
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
       background-image: url("/img/advantage-clock@2x.png");
     }
