--- a/source/sass/blocks/illustration.scss
+++ b/source/sass/blocks/illustration.scss
@@ -1,5 +1,5 @@
 .illustration {
-  padding-bottom: 37px;
+  padding-bottom: 57px;
   background-color: $grey-1;
 
   @media (min-width: $screen-tablet) {
@@ -21,8 +21,7 @@
   @media (min-width: $screen-desktop) {
     display: flex;
     justify-content: center;
-    // background-image: linear-gradient(#ffffff 29%, $grey-1 29%);
-    background-image: linear-gradient(to right,#f2f2f2 0%,#f2f2f2 50%,#ebebeb 50%,#ebebeb 100%);
+    background-image: linear-gradient(to right, #f2f2f2 0%, #f2f2f2 50%, #ebebeb 50%, #ebebeb 100%);
     background-position: center bottom;
     background-size: 100% calc(100% - 188px);
     background-repeat: no-repeat;
@@ -94,6 +93,7 @@
   @media (min-width: $screen-desktop) {
     width: 100%;
     margin-top: 60px;
+    margin-bottom: 60px;
     text-align: left;
 
     span {
@@ -108,14 +108,14 @@
   padding-right: 21px;
 
   @media (min-width: $screen-tablet) {
-    height: 420px;
+    min-height: 420px;
     margin-bottom: 20px;
     padding-top: 27px;
   }
 
   @media (min-width: $screen-desktop) {
     width: 610px;
-    height: 652px;
+    min-height: 652px;
     margin: 0;
     padding: 0;
   }
@@ -132,8 +132,7 @@
   @media (min-width: $screen-desktop) {
     width: 610px;
     padding: 0;
-    height: 652px;
-    background-image: linear-gradient(to right, $grey-1 0%, #f2f2f2 53%, #eaeaea 53%, #eaeaea 100%);
+    min-height: 652px;
     background-position: 0 188px;
   }
 }
