--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -1,14 +1,26 @@
-.slider__control {
+.slider {
   position: relative;
+
+  @media (min-width: $screen-tablet) {
+    min-height: 641px;
+  }
+}
+
+.slider__control {
+  position: absolute;
+  top: 272px;
+  left: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 210px;
-  margin: 0 auto;
+  margin-left: -105px;
   padding: 0;
 
   @media (min-width: $screen-tablet) {
-    position: relative;
+    top: 550px;
+    left: 50%;
+    margin-left: -284px;
     width: auto;
   }
 
@@ -48,6 +60,7 @@
 }
 
 .slider__toggler {
+  position: relative;
   width: 85px;
   height: 13px;
   margin-right: 19px;
@@ -66,8 +79,8 @@
 
 .slider__button {
   position: absolute;
-  top: 7px;
-  left: 33%;
+  top: 3px;
+  left: 8px;
   width: 36px;
   height: 6px;
   background-color: $green-2;
@@ -85,27 +98,30 @@
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.15);
 
     &--before {
-      left: 48%;
+      top: -15px;
+      left: 50%;
+      margin-left: -17px;
 
       &:hover {
-        box-shadow: 0px 3px 5px 0 rgba(0, 0, 0, 0.25);
+        box-shadow: 0 3px 5px rgba(0, 0, 0, 0.25);
       }
 
       &:active {
         border-color: $green-1;
-        box-shadow: 0px 4px 5px 0 rgba(0, 0, 0, 0.3);
+        box-shadow: 0 4px 5px rgba(0, 0, 0, 0.3);
       }
     }
-
-  }
-
-  @media (min-width: $screen-desktop) {
-    left: 50%;
   }
 }
 
 .slider__image-wrap {
   margin-bottom: 29px;
+
+  @media (min-width: $screen-tablet) {
+    position: absolute;
+    overflow: hidden;
+    width: 345px;
+  }
 
   @media (min-width: $screen-desktop) {
     margin-bottom: 40px;
@@ -113,10 +129,9 @@
 
   &--before {
     @media (min-width: $screen-tablet) {
-      // position: absolute;
-      // overflow: hidden;
+      left: 50%;
       z-index: 1;
-      // width: 345px;
+      margin-left: -345px;
     }
   }
 
@@ -124,9 +139,9 @@
     display: none;
 
     @media (min-width: $screen-tablet) {
-      position: relative;
-      // display: block;
-      // width: 345px;
+      display: block;
+      right: 50%;
+      margin-right: -345px;
     }
   }
 }
@@ -137,10 +152,5 @@
     width: 690px;
     max-width: 690px;
     height: 517px;
-    margin: 0 auto;
-  }
-
-  @media (min-width: $screen-desktop) {
-    max-width: 600px;
   }
 }
