--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,8 +1,10 @@
 .button {
   display: inline-block;
   width: 100%;
-  padding: 11px;
+  padding: 10px;
   font: inherit;
+  font-size: 16px;
+  line-height: 20px;
   color: #ffffff;
   text-align: center;
   text-transform: uppercase;
