--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -2,7 +2,8 @@
   position: relative;
 
   @media (min-width: $screen-tablet) {
-    min-height: 641px;
+    // min-height: 641px;
+    min-height: 631px;
   }
 }
 
@@ -14,18 +15,23 @@
   justify-content: center;
   align-items: center;
   width: 210px;
-  margin-left: -105px;
+  // margin-left: -105px;
+  transform: translateX(-105px);
   padding: 0;
 
   @media (min-width: $screen-tablet) {
-    top: 550px;
+    // top: 550px;
+    top: 540px;
     left: 50%;
-    margin-left: -284px;
+    // margin-left: -284px;
+    transform: translateX(-284px);
     width: auto;
   }
 
   @media (min-width: $screen-desktop) {
     justify-content: flex-end;
+    top: 560px;
+    left: 53%;
   }
 }
 
@@ -100,7 +106,8 @@
     &--before {
       top: -15px;
       left: 50%;
-      margin-left: -17px;
+      // margin-left: -17px;
+      transform: translateX(-17px);
 
       &:hover {
         box-shadow: 0 3px 5px rgba(0, 0, 0, 0.25);
@@ -131,7 +138,12 @@
     @media (min-width: $screen-tablet) {
       left: 50%;
       z-index: 1;
-      margin-left: -345px;
+      // margin-left: -345px;
+      transform: translateX(-345px);
+    }
+
+    @media (min-width: $screen-desktop) {
+      width: 365px;
     }
   }
 
@@ -141,7 +153,12 @@
     @media (min-width: $screen-tablet) {
       display: block;
       right: 50%;
-      margin-right: -345px;
+      // margin-right: -345px;
+      transform: translateX(345px);
+    }
+
+    @media (min-width: $screen-desktop) {
+
     }
   }
 }
@@ -152,5 +169,11 @@
     width: 690px;
     max-width: 690px;
     height: 517px;
+  }
+
+  &--after {
+    @media (min-width: $screen-tablet) {
+      transform: translateX(-50%);
+    }
   }
 }
