--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -18,7 +18,7 @@
   padding-left: $padding-mobile;
   padding-right: 40px;
 
-  @include font(14, 1.2);
+  @include font(14, 18px);
   text-transform: uppercase;
   color: $dark-3;
 
@@ -373,7 +373,7 @@ input:disabled + .form__checkbox {
 .form__title {
   margin: 0;
   padding-top: 17px;
-  padding-bottom: 25px;
+  padding-bottom: 24px;
   padding-right: 22px;
   padding-left: 20px;
   text-align: left;
@@ -385,11 +385,11 @@ input:disabled + .form__checkbox {
 
     &:nth-of-type(2) {
       margin-bottom: 50px;
-      padding-top: 45px;
+      padding-top: 50px;
     }
 
     &:nth-of-type(3) {
-      margin-bottom: 23px;
+      margin-bottom: 25px;
       padding-top: 48px;
     }
 
@@ -483,6 +483,7 @@ input:disabled + .form__checkbox {
     display: inline-block;
     width: auto;
     padding: 0;
+    line-height: 16px;
   }
 }
 
