--- a/source/sass/blocks/illustration.scss
+++ b/source/sass/blocks/illustration.scss
@@ -30,15 +30,16 @@
 
 .illustration__title {
   margin-bottom: 23px;
-  line-height: 1.67;
+  // line-height: 1.67;
 
   @media (min-width: $screen-tablet) {
-    margin-bottom: 40px;
+    padding-top: 19px;
+    margin-bottom: 60px;
   }
 
   @media (min-width: $screen-desktop) {
-    padding-top: 39px;
-    margin-bottom: 123px;
+    padding-top: 60px;
+    margin-bottom: 143px;
   }
 }
 
