--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -122,7 +122,7 @@
   }
 
   &:invalid {
-    // box-shadow: inset 0 0 0 2px red;
+    box-shadow: inset 0 0 0 2px red;
   }
 }
 
@@ -167,19 +167,6 @@
       margin-right: 20px;
     }
   }
-  //
-  // &:hover::before {
-  //   border-color: red;
-  //   // border-color: #bababa;
-  // }
-}
-
-input:checked + .form__radio::before {
-  background-color: $green-2;
-}
-
-input:focus + .form__radio::before {
-  border: 1px solid $grey-4;
 }
 
 .form__textarea {
@@ -256,7 +243,6 @@ input:focus + .form__radio::before {
       margin-right: 70px;
       margin-bottom: 22px;
       padding: 24px 28px;
-      // border: 1px solid $grey-4;
     }
 
     @media (min-width: $screen-desktop) {
@@ -341,33 +327,42 @@ input:focus + .form__radio::before {
       margin-right: 18px;
     }
   }
-
-  &:hover::before {
-    border-color: #bababa;
-  }
 }
 
-input:checked + .form__checkbox::after {
-  content: "";
-  position: absolute;
-  top: 7px;
-  left: 5px;
-  width: 20px;
-  height: 11px;
-  border: 2px solid $green-1;
-  border-top: none;
-  border-right: none;
-  transform: rotate(-50deg);
-
-  @media (min-width: $screen-tablet) {
-    top: 9px;
-    left: 11px;
+input {
+  &:focus + .form__radio::before,
+  &:hover + .form__radio::before,
+  &:focus + .form__checkbox::before,
+  &:hover + .form__checkbox::before {
+    border: 1px solid #bababa;
   }
-}
 
-input:disabled + .form__radio,
-input:disabled + .form__checkbox {
-  opacity: 0.3;
+  &:checked + .form__radio::before {
+    background-color: $green-2;
+  }
+
+  &:checked + .form__checkbox::after {
+    content: "";
+    position: absolute;
+    top: 7px;
+    left: 5px;
+    width: 20px;
+    height: 11px;
+    border: 2px solid $green-1;
+    border-top: none;
+    border-right: none;
+    transform: rotate(-50deg);
+
+    @media (min-width: $screen-tablet) {
+      top: 9px;
+      left: 11px;
+    }
+  }
+
+  &:disabled + .form__radio,
+  &:disabled + .form__checkbox {
+    opacity: 0.3;
+  }
 }
 
 .form__title {
