--- a/source/sass/blocks/basic.scss
+++ b/source/sass/blocks/basic.scss
@@ -7,7 +7,7 @@
   padding-top: 20px;
 
   @media (max-width: 767px) {  // for mobile ONLY
-    height: 480px;
+    min-height: 480px;
     background-image: $top-gradient;
 
     @include b-image("index-background-mobile@1x.jpg");
@@ -97,7 +97,6 @@
 
 .basic__button {
   @media (min-width: $screen-tablet) {
-    // order: 1;
     width: auto;
     padding-top: 14px;
     padding-bottom: 14px;
