--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -381,7 +381,11 @@ input {
 
     &:nth-of-type(2) {
       margin-bottom: 50px;
-      padding-top: 50px;
+      padding-top: 46px;
+
+      @media (min-width: $screen-desktop) {
+        margin-bottom: 53px;
+      }
     }
 
     &:nth-of-type(3) {
